--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "whatsnewsapp",
   "version": "1.0.0",
   "description": "React app showing news and weather.",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "webpack-dev-server  --open",
     "build": "webpack",
@@ -11,8 +11,10 @@
   "author": "Amazing Abhi & Mighty Mike",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
@@ -20,13 +22,18 @@
     "@babel/plugin-transform-arrow-functions": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.4.4",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0"
   },
