--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Amazing Abhi & Mighty Mike",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,6 +31,7 @@
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.4.4",
